--- a/templates/account/password.html
+++ b/templates/account/password.html
@@ -9,6 +9,7 @@
 {% from "_formhelpers.html" import render_field %}
 <div class="row">
     <div class="col-md-9 col-sm-offset-3">
+        {% include "_flash_messages.html" %}
         <h1><strong>{{current_user.fullname}}</strong>: {{ _('Change your Password') }}</h1>
         <form method="post" role="form" action="{{ url_for('account.change_password', name=current_user.name) }}">
             <fieldset>
