--- a/templates/account/password_forgot.html
+++ b/templates/account/password_forgot.html
@@ -6,6 +6,7 @@
     {% from "_formhelpers.html" import render_field %}
         
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        {% include "_flash_messages.html" %}
         <h4 class="text-center">{{ _('Reset your Password') }}</h4>
         <form method="post" role="form">
             <fieldset>
