--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -9,6 +9,7 @@
 <div class="container-padded remove-padding-bottom">
     <section class="mid-grey pattern-brushed box-shadow-grey-bottom padding-bottom">
         <div class="container padding-top">
+            {% include "_flash_messages.html" %}
                 {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
                     {{ privacy.render_lock_page() }}
                 {% else %}
