--- a/templates/applications/blog_post.html
+++ b/templates/applications/blog_post.html
@@ -8,6 +8,7 @@
         <div class="row">
             {% if blogpost %}
             <div class="col-sm-9" style="min-height:400px">
+                {% include "_flash_messages.html" %}
                 <hr>
                     <article>
                         <header>
