--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -25,6 +25,7 @@
         
                 <div class="container">
                     <div class="col-xs-12 padding-top-xs">
+                        {% include "_flash_messages.html" %}
                         <div id="sorts" class="btn-group pull-right">
                             <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Sort by <span id="order">name</span> <span class="caret"></span></button>
                             <ul class="dropdown-menu" style="top:35px;">
