--- a/templates/applications/presenter.html
+++ b/templates/applications/presenter.html
@@ -16,6 +16,7 @@
         {% if invite_new_volunteers %}
         <div class="row">
             <div class="col-xs-12">
+                {% include "_flash_messages.html" %}
                 <p>
                 {{ _("Sorry, you've contributed to all the tasks for this project, but this project still needs more volunteers, so please spread the word!") }}
                 </p>
