--- a/templates/help/_tos.html
+++ b/templates/help/_tos.html
@@ -5,6 +5,7 @@
 </style>
 <div class="row">
     <div class="col-sm-12">
+        {% include "_flash_messages.html" %}
         <section id="introduction">
             <h1>Introduction</h1>
 
