--- a/templates/help/license.html
+++ b/templates/help/license.html
@@ -6,6 +6,7 @@
         <div class="container container-padded">
         <div class="row">
             <div class="col-sm-12">
+                {% include "_flash_messages.html" %}
                 <section id="overview">
                     <h1><strong>{{brand}}</strong>: Licenses</h1>
                     <p>
