--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -1,6 +1,7 @@
 <div class="container-padded">
     <section class="white">
         <div class="container container-padded">
+            {% include "_flash_messages.html" %}
             <div class="col-md-11">
                 <h1>{{ _('About') }}</h1>
                 
