--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -6,6 +6,7 @@
         <div class="container container-padded">
             <div class="row">
                 <div class="col-sm-12">
+                    {% include "_flash_messages.html" %}
                     <h1>{{ _('Search Results') }}</h1>
                     <gcse:searchresults-only></gcse:searchresults-only> 
                 </div>
