--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -138,7 +138,7 @@ ul.users li a{display:block;margin-bottom:5px;margin-right:20px}
 #cookies_warning > p{margin-top:8px}
 @media (max-width: 991px) {
 body{padding-top:0}
-.navbar .container{width:724px!important}
+.navbar .container{width:auto!important;}
 .navbar .brand{padding:0}
 .navbar .brand img{max-height:20px}
 .navbar .nav > li > a{margin-top:5px;margin-bottom:0}
@@ -302,7 +302,7 @@ pre.prettyprint{text-align:left}
 .vcenter-md{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-flex-align:center;-ms-flex-align:center;-webkit-align-items:center}
 }
 .hcenter{justify-content:center;align-items:center}
-.alert-messages{position:fixed;top:80px;width:50%;margin-left:25%;z-index:110}
+.alert-messages .floating{position:fixed;top:80px;width:50%;margin-left:25%;z-index:110}
 .alert-error{color:#a94442;background-color:#f2dede;border-color:#ebccd1}
 .alert-message{color:#31708f;background-color:#d9edf7;border-color:#bce8f1}
 .profile-image{max-height:300px}
@@ -409,3 +409,4 @@ to{-webkit-transform:rotate(360deg)}
 .legend{list-style:none;margin:0;padding:0;font-size:14px;margin-top:20px}
 .legend li{margin-bottom:4px}
 .legend li:first-letter{text-transform:capitalize}
+@media (max-width:991px){.navbar-header{float:none}.navbar-toggle{display:block}.navbar-collapse{border-top:1px solid transparent;box-shadow:inset 0 1px 0 rgba(255,255,255,.1)}.navbar-collapse.collapse{display:none!important}.navbar-nav{float:none!important;margin:7.5px -15px}.navbar-nav>li{float:none}.navbar-nav>li>a{padding-top:10px;padding-bottom:10px}.navbar-text{float:none;margin:15px 0}.navbar-collapse.collapse.in{display:block!important}.collapsing{overflow:hidden!important}}
