--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -20,16 +20,16 @@
             {% include '_gcs_form.html' ignore missing %}
           {% if current_user.is_authenticated() %}
             <ul class="nav navbar-nav navbar-right">
-                <li class="nav-link"><a href="#" data-toggle="dropdown" class="dropdown-toggle"><i class="icon glyphicon glyphicon-user"></i> {{ current_user.name | truncate(10,true) }} <span class="caret"></span></a>
+                <li class="nav-link"><a href="#" data-toggle="dropdown" class="dropdown-toggle"><i class="icon fa fa-user"></i> {{ current_user.name | truncate(10,true) }} <span class="caret"></span></a>
                   <ul class="dropdown-menu opaque">
-                    <li class="nav-link"><a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="icon glyphicon glyphicon-user"></i> {{ _('Profile') }}</a></li>
-                    <li class="nav-link"><a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="icon glyphicon glyphicon-cog"></i> {{ _('Settings') }}</a></li>
+                    <li class="nav-link"><a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="fa fa-user"></i> {{ _('Profile') }}</a></li>
+                    <li class="nav-link"><a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="fa fa-cog"></i> {{ _('Settings') }}</a></li>
                     {% if current_user.admin == 1 %}
                     <li class="divider"></li>
-                    <li class="nav-link"><a href="{{ url_for('admin.index') }}"><i class="icon glyphicon glyphicon-cog"></i> {{ _('Admin') }}</a></li>
+                    <li class="nav-link"><a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> {{ _('Admin') }}</a></li>
                     {% endif %}
                     <li class="divider"></li>
-                  <li class="nav-link"><a href="{{ url_for('account.signout') }}"><i class="icon glyphicon glyphicon-off"></i> {{ _('Sign Out') }}</a></li>
+                  <li class="nav-link"><a href="{{ url_for('account.signout') }}"><i class="fa fa-power-off"></i> {{ _('Sign Out') }}</a></li>
                 </ul>
               </li>
             </ul>
