--- a/templates/account/account_validation.html
+++ b/templates/account/account_validation.html
@@ -3,6 +3,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-12">
+        {% include "_flash_messages.html" %}
         <div class="col-md-4 col-md-offset-4">
             <h2>{{ _('Just one more step, please') }}</h2>
             <p>{{ _("In order to confirm your identity, we've sent an email to the address you just provided. Please, check it out and click on the link you'll find to create your account at") }} {{ config.BRAND }}.</p>
