--- a/templates/account/applications.html
+++ b/templates/account/applications.html
@@ -11,6 +11,7 @@
             <div class="container container-padded">
                 <div class="row">
                     <div class="col-sm-9 col-sm-offset-3">
+                        {% include "_flash_messages.html" %}
                     {% if current_user.admin == 1 %}
                         <div class="row vcenter hcenter">
                             <div class="col-md-8 col-xs-12">
