--- a/templates/account/newsletter.html
+++ b/templates/account/newsletter.html
@@ -7,6 +7,7 @@
 <div class="row">
 
 	<div id="newsletter" class="col-md-9">
+		{% include "_flash_messages.html" %}
 		<h1>{{ _('Newsletter') }}</h1>
         <p class="lead">{{_('If you want to be updated with our new features, projects, and
         scientific projects, subscribe to our newsletter.')}}</p>
