--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -8,6 +8,7 @@
 
     
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        {% include "_flash_messages.html" %}
         <h4 class="text-center">Reset your Password</h4>
         <form method="post" class="form-horizontal">
             <fieldset>
