--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -9,6 +9,7 @@
         <div class="container container-padded">
             <div class="row">
                 <div class="col-sm-9 col-sm-offset-3">
+                    {% include "_flash_messages.html" %}
                     {% if current_user.admin %}
                         <div class="row vcenter-sm">
                             <div class="col-sm-9 col-xs-12 vcenter-sm">
