--- a/templates/account/register.html
+++ b/templates/account/register.html
@@ -6,6 +6,7 @@
 {% from "_formhelpers.html" import render_field %}
 
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        {% include "_flash_messages.html" %}
         <h4 class="text-center">{{ _('Create an account') }}</h4>
         <form method="post" role="form" action="{{ url_for('account.register') }}">
       {{ form.hidden_tag() }}
