--- a/templates/admin/applications.html
+++ b/templates/admin/applications.html
@@ -9,6 +9,7 @@
         <div class="container container-padded">
             <div class="row">
                 <div class="col-sm-9 col-sm-offset-3">
+                    {% include "_flash_messages.html" %}
                     <h1><strong>{{ _('Admin') }} :</strong> {{ _('Featured projects') }}</h1>
                 {% include "admin/js/featured_apps.js" %}
                     <ul class="nav nav-pills nav-pills-dark">
