--- a/templates/admin/bl_search.html
+++ b/templates/admin/bl_search.html
@@ -8,6 +8,7 @@
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3 text-center-xs">
+                {% include "_flash_messages.html" %}
                 <div class="row vcenter-sm">
                     <div class="col-sm-10 col-xs-12 vcenter-sm">
                         <h1 class="">Search the British Library database</h1>
