--- a/templates/admin/del_category.html
+++ b/templates/admin/del_category.html
@@ -9,6 +9,7 @@
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
                 <h1><strong>{{ _('Admin') }}:</strong> Delete Category</h1>
                 <hr>
                 <div class="alert alert-danger">
