--- a/templates/applications/auditlog.html
+++ b/templates/applications/auditlog.html
@@ -11,6 +11,7 @@
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
+                            {% include "_flash_messages.html" %}
                         {{ helper.render_app_title(app, upload_method) }}
                         {% if logs %}
                         <table class="table table-stripped table-condensed table-hover table-responsive">
