--- a/templates/applications/blog.html
+++ b/templates/applications/blog.html
@@ -10,6 +10,7 @@
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
+                            {% include "_flash_messages.html" %}
                         {{ helper.render_app_title(app, upload_method) }}
                         <hr>
                         {% if blogposts %}
