--- a/templates/applications/delete.html
+++ b/templates/applications/delete.html
@@ -10,6 +10,7 @@
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
+                          {% include "_flash_messages.html" %}
                           <h1><strong>{{app.name}}</strong>: Delete project</h1>
                           <div class="alert alert-danger">
                               <strong>{{ _('Warning!') }}</strong> {{ _('If you delete the project, it and its tasks will be gone forever!') }}
