--- a/templates/applications/importers/dropbox.html
+++ b/templates/applications/importers/dropbox.html
@@ -13,6 +13,7 @@
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
+                          {% include "_flash_messages.html" %}
                             {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
                             <h1><strong>{{app.name}}</strong>: {{_('Import tasks')}}</h1>
                             <hr>
