--- a/templates/applications/new.html
+++ b/templates/applications/new.html
@@ -12,6 +12,7 @@
         {% if current_user.admin %}
         <div id="app-form" class="row">
             <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
                     <h4 class="text-center">{{ _('Create a new project') }}</h4>
                     <form role="form" method="post" action="{{ url_for('app.new')}}" enctype="multipart/form-data"}}>
                     {{ form.hidden_tag() }}
