--- a/templates/applications/new_blogpost.html
+++ b/templates/applications/new_blogpost.html
@@ -10,6 +10,7 @@
         <div class="container container-padded">
         <div id="app-form" class="row"> 
             <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
                 {{ helper.render_app_title(app) }}
                 <h2>{{ _('Write a new blog post for ad') }} {{ app.name }}</h2>
             <form class="form-horizontal" method="post" action="{{ url_for('app.new_blogpost', short_name=app.short_name) }}">
