--- a/templates/applications/password.html
+++ b/templates/applications/password.html
@@ -8,6 +8,7 @@
         <div class="container container-padded">
 <div id="app-form" class="row"> 
     <div class="col-sm-6 col-sm-offset-3">
+        {% include "_flash_messages.html" %}
         {{ helper.render_app_title(app) }}
         <h2>{{ _('Enter the password to contribute to this project:') }}</h2>
     <form class="form-horizontal" method="post" action="{{ url_for('app.password_required', short_name=short_name, next=next) }}">
