--- a/templates/applications/settings.html
+++ b/templates/applications/settings.html
@@ -11,6 +11,7 @@
             {% if app %}
             <!-- Project -->
             <div class="col-sm-9 col-sm-offset-3 xs-center">
+                {% include "_flash_messages.html" %}
                 <h1><strong>{{ app.name }}</strong>: {{ _('Settings') }}</h1>
                 <div class="btn-group">
                     <a class="btn" href="{{ url_for('app.update', short_name = app.short_name) }}"><i class="glyphicon glyphicon-edit icon-white"></i> {{ _('Edit the project details') }}</a>
