--- a/templates/applications/stats.html
+++ b/templates/applications/stats.html
@@ -27,6 +27,7 @@
             <div class="container container-padded">
 <div class="row">
     <div class="col-sm-9 col-sm-offset-3">
+        {% include "_flash_messages.html" %}
         {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
         {{ privacy.render_lock_page() }}
         {% else %}
