--- a/templates/applications/task_n_answers.html
+++ b/templates/applications/task_n_answers.html
@@ -11,6 +11,7 @@
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
                                 {{ helper.render_app_title(app, subtitle=_('Task Redundancy')) }}
                                 <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('app.task_n_answers', short_name=app.short_name) }}">
                                     {{ form.hidden_tag() }}
