--- a/templates/applications/task_presenter_options.html
+++ b/templates/applications/task_presenter_options.html
@@ -9,6 +9,7 @@
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
                     {% include "applications/snippets/options.html" %}
                 </div>
             </div>
