--- a/templates/applications/task_priority.html
+++ b/templates/applications/task_priority.html
@@ -11,6 +11,7 @@
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
                 {{ helper.render_app_title(app, subtitle=_('Task Priority'))}}
                 <p>{{_('You can change the')}}
                 <strong>{{_('priority')}}</strong> {{_('of one or more tasks,
