--- a/templates/applications/tasks.html
+++ b/templates/applications/tasks.html
@@ -11,10 +11,11 @@
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
                         <h1 class="inset-text-grey"><strong>Project Options</strong></h1>
                         {% if app.owner_id == current_user.id or (current_user.is_authenticated() and current_user.admin)%}
-                        <div class="row">
-                            <div id="import_tasks" class="col-sm-4">
+                    
+                            <div id="import_tasks" class="col-sm-6 col-md-4">
                                 <a href="{{url_for('app.import_task', short_name=app.short_name)}}" rel="nofollow">
                                 <div class="well  ">
                                         <i class="fa fa-upload fa-4x"></i> 
@@ -22,7 +23,7 @@
                                 </div>
                                 </a>
                             </div>
-                            <div id="export_tasks" class="col-sm-4">
+                            <div id="export_tasks" class="col-sm-6 col-md-4">
                                 <a href="{{url_for('app.export_to', short_name=app.short_name)}}" rel="nofollow">
                                         <div class="well  ">
                                                 <i class="fa fa-download fa-4x"></i>
@@ -31,7 +32,7 @@
                                 </a>
                             </div>
                             
-                            <div id="autoimport_tasks" class="col-sm-4">
+                            <div id="autoimport_tasks" class="col-sm-6 col-md-4">
                                 <a href="{{url_for('app.setup_autoimporter', short_name=app.short_name)}}" rel="nofollow">
                                         <div class="well  ">
                                                 <i class="fa fa-cogs fa-4x"></i>
@@ -39,9 +40,8 @@
                                         </div>
                                 </a>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div id="task_presenter" class="col-sm-4">
+                            
+                            <div id="task_presenter" class="col-sm-6 col-md-4">
                                 <a href="{{url_for('app.task_presenter_editor', short_name=app.short_name)}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-edit fa-4x"></i>
@@ -50,7 +50,7 @@
                                 </a>
                             </div>
                         
-                            <div id="task_browse" class="col-sm-4">
+                            <div id="task_browse" class="col-sm-6 col-md-4">
                                 <a href="{{url_for('app.tasks_browse', short_name=app.short_name)}}" rel="nofollow">
                                 <div class="well">
                                         <i class="fa fa-list-alt fa-4x"></i>
@@ -59,7 +59,7 @@
                                 </a>
                             </div>
                             
-                            <div id="task_delete" class="col-sm-4">
+                            <div id="task_delete" class="col-sm-6 col-md-4">
                                 <a href="{{url_for('app.delete_tasks', short_name=app.short_name)}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-trash-o fa-4x"></i>
@@ -67,9 +67,8 @@
                                     </div>
                                 </a>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div id="task_redundancy" class="col-sm-4">
+                            
+                            <div id="task_redundancy" class="col-sm-6 col-md-4">
                                 <a href="{{url_for('app.task_n_answers', short_name=app.short_name)}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-repeat fa-4x"></i>
@@ -78,7 +77,7 @@
                                 </a>
                             </div>
                         
-                            <div id="task_priority" class="col-sm-4">
+                            <div id="task_priority" class="col-sm-6 col-md-4">
                                 <a href="{{url_for('app.task_priority', short_name=app.short_name)}}" rel="nofollow">
                                 <div class="well">
                                         <i class="fa fa-sort-numeric-asc fa-4x"></i>
@@ -87,7 +86,7 @@
                                 </a>
                             </div>
                             
-                            <div id="task_scheduler" class="col-sm-4">
+                            <div id="task_scheduler" class="col-sm-6 col-md-4">
                                 <a href="{{url_for('app.task_scheduler', short_name=app.short_name)}}" rel="nofollow">
                                     <div class="well">
                                         <i class="fa fa-filter fa-4x"></i>
@@ -95,7 +94,7 @@
                                     </div>
                                 </a>
                             </div>
-                        </div>
+                            
                         {% endif %}
                     </div>
                 </div>
