--- a/templates/applications/update.html
+++ b/templates/applications/update.html
@@ -11,6 +11,7 @@
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
               <legend><strong>{{app.name}}</strong>: {{_('Update the project')}}</legend>
               <!-- Update form for project thumbnail -->
               <form method="post" class="form-horizontal" action="{{ url_for('app.update', short_name=app.short_name) }}" enctype="multipart/form-data">
