--- a/templates/applications/update_blogpost.html
+++ b/templates/applications/update_blogpost.html
@@ -10,6 +10,7 @@
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
                     {{ helper.render_app_title(app) }}
                     <h2>{{ _('Edit the blog post') }}</h2>
                     <form class="form-horizontal" method="post" action="{{ url_for('app.update_blogpost',
