--- a/templates/help/api.html
+++ b/templates/help/api.html
@@ -9,6 +9,7 @@
         <div class="container container-padded">
         <div class="row">
             <div class="col-sm-12">
+                {% include "_flash_messages.html" %}
                 <h1><strong>{{brand}}</strong>: API Help</h1>
                 <p>{{brand}} has a <a href="http://en.wikipedia.org/wiki/Representational_state_transfer">RESTful API</a> that can be used for creating new projects,
                 getting tasks, submitting answers, etc. The API end point is available at:
