--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -16,6 +16,7 @@
 <link href="{{url_for('static', filename='css/stats/MarkerCluster.Default.css')}}" rel="stylesheet" type="text/css">
 <script src="{{url_for('static', filename='js/stats/leaflet.markercluster.js')}}" type="text/javascript"></script>
 <div class="container container-main">
+    {% include "_flash_messages.html" %}
     {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
                 {{ privacy.render_lock_page() }}
             {% else %}
@@ -38,8 +39,8 @@
                 </div>
             </div>
             
-            <div class="row padding-bottom-sm">
-                <div class="col-sm-6 col-xs-12">
+            <div class="row">
+                <div class="col-sm-6 col-xs-12 padding-bottom-sm">
                     <div class="white-rounded chart">
                         <h4 class="text-center padding-bottom-sm">Top Volunteers This Week</h4>
                         <div id="top-users-chart">
@@ -49,7 +50,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-xs-12">
+                <div class="col-sm-6 col-xs-12 padding-bottom-sm">
                     <div class="white-rounded chart">
                         <h4 class="text-center padding-bottom-sm">Top Projects This Week</h4>
                         <div id="top-projects-chart">
@@ -61,8 +62,8 @@
                 </div>
             </div>
             
-            <div class="row padding-bottom-sm">
-                <div class="col-sm-4 col-xs-12">
+            <div class="row">
+                <div class="col-sm-4 col-xs-12 padding-bottom-sm">
                     <div class="white-rounded chart same-size">
                         <h4 class="text-center padding-bottom-sm">Proportion of Authenticated Users</h4>
                         <div id="user-chart">
@@ -72,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-xs-12">
+                <div class="col-sm-4 col-xs-12 padding-bottom-sm">
                     <div class="white-rounded chart same-size">
                         <h4 class="text-center padding-bottom-sm">Total Daily Activity</h4>
                         <div id="dow-chart">
@@ -82,7 +83,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-xs-12">
+                <div class="col-sm-4 col-xs-12 padding-bottom-sm">
                     <div class="white-rounded chart same-size">
                         <h4 class="text-center padding-bottom-sm">Status of Tasks</h4>
                         <div id="task-status-chart">
