--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -6,18 +6,17 @@
                 <h1>{{ _('About') }}</h1>
                 
                 <p>{{ brand }} is a crowd-sourcing platform with the ultimate goal of making important research material available
-                to a wider audience.</p>
+                and accessible to a wider audience.</p>
                     
-                <p>Each project contains a collection of tasks related to a specific area of research. These tasks are not things
-                that can be accurately processed by computers, they require human intelligence. While
-                each individual task can usually be completed quickly, the collections of tasks are often vast. Therefore, the only
-                feasible way to complete such a number of tasks within a reasonable length of time is via widespread user
-                contributions.</p>
+                <p>Each project contains a collection of tasks related to a specific area of research. These are tasks that can be
+                accurately processed by computers, they require human intelligence. Each individual task can usually be completed quickly,
+                yet the collections of tasks are often vast. Therefore, the only feasible way to complete such a number of tasks
+                within a reasonable length of time is via widespread user contributions.</p>
                     
                 <p>By participating you will have a direct impact on the availability of research material to anyone interested in
                 the diverse collections available at the British Library. Records matched, located, transcribed or translated as part of
-                opne of our crowd-sourcing projects will be quickly uploaded to the British Library's catalogues. These online catalogues
-                are free for anyone to search in their entirety.</p>
+                one of our crowd-sourcing projects will be uploaded to the British Library's catalogues. These catalogues
+                are free for anyone to search online in their entirety.</p>
             </div>
         </div>
     </section>
@@ -47,8 +46,8 @@
                 <h1 id="contact">{{ _('Contact information') }}</h1>
                 <ul>
                     <li>For more info, email: <a href="mailto:info@libcrowds.com">info@libcrowds.com</a></li>
-                    <li>To report any bugs, issues or improvements, visit: 
-                        <a href="https://github.com/alexandermendes/BL-pybossa-theme/issues">{{ _('Github Issues') }}</a>
+                    <li>Report any bugs, issues or improvements,
+                    <a href="https://github.com/alexandermendes/BL-pybossa-theme/issues">here</a> or <a href="https://github.com/alexandermendes/pybossa/issues">here</a>
                     </li>            
                 </ul>
             </div>
