--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -131,9 +131,9 @@ body > footer .container{padding-top:20px;padding-bottom:20px}
 .banner .featured li img{min-width:100px;min-height:100px}
 .get-started .span4 p:first-of-type{margin-top:-10px}
 .get-started .span8 .btn{margin:18px 0 18px 10px}
-ul.users{margin:0 0 10px -3px;height:128px;overflow:hidden}
-ul.users li{display:inline-block;margin:0 0 5px 3px}
-ul.users li a{display:block;margin-bottom:5px;margin-right:20px}
+ul.users{margin:0 auto;display:table;}
+ul.users li{display:inline-block;margin:0 0 35px 3px;float:none;}
+ul.users li a{display:block;margin-bottom:5px;margin-right:10px;margin-left:10px}
 #cookies_warning{position:fixed;color:#ddd;min-height:30px;position:fixed;left:0;bottom:0;width:100%;z-index:99999;padding:6px 20px 4px;background-color:rgba(70,70,70,0.9);text-align:left}
 #cookies_warning > p{margin-top:8px}
 @media (max-width: 991px) {
@@ -168,8 +168,8 @@ body > footer .container{padding-left:20px;padding-right:20px}
 .bs-docs-sidenav.affix li:first-child{padding-top:40px}
 .bs-docs-sidenav.affix .nav-stacked li:first-child{padding-top:10px}
 .bs-docs-sidenav li.nav-link{margin-bottom:5px}
-.bs-docs-sidenav li > a{color:#A0A0A0;display:block;margin:0 0 -1px;padding:10px 14px;border-radius:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;transition:color 100ms;-webkit-transition:color 100ms;-ms-transition:color 100ms;-moz-transition:color 100ms;-o-transition:color 100ms}
-.bs-docs-sidenav > .active > a{background-color:#BA0000;color:#F7F7F7;position:relative;z-index:2;padding:9px 15px;border:0;text-shadow:0 1px 0 rgba(0,0,0,.15);-webkit-box-shadow:inset 1px 0 0 rgba(0,0,0,.1),inset -1px 0 0 rgba(0,0,0,.1);-moz-box-shadow:inset 1px 0 0 rgba(0,0,0,.1),inset -1px 0 0 rgba(0,0,0,.1);box-shadow:inset 1px 0 0 rgba(0,0,0,.1),inset -1px 0 0 rgba(0,0,0,.1)}
+.bs-docs-sidenav li > a{color:#A0A0A0;display:block;margin:0 0 -1px;padding:10px 20px;border-radius:0;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;transition:color 100ms;-webkit-transition:color 100ms;-ms-transition:color 100ms;-moz-transition:color 100ms;-o-transition:color 100ms}
+.bs-docs-sidenav > .active > a{background-color:#BA0000;color:#F7F7F7;position:relative;z-index:2;padding:9px 20px;border:0;text-shadow:0 1px 0 rgba(0,0,0,.15);-webkit-box-shadow:inset 1px 0 0 rgba(0,0,0,.1),inset -1px 0 0 rgba(0,0,0,.1);-moz-box-shadow:inset 1px 0 0 rgba(0,0,0,.1),inset -1px 0 0 rgba(0,0,0,.1);box-shadow:inset 1px 0 0 rgba(0,0,0,.1),inset -1px 0 0 rgba(0,0,0,.1)}
 .bs-docs-sidenav .nav-link.active a:after{opacity:0}
 .bs-docs-sidenav .nav-link a:after{bottom:0;right:0;left:initial;background-color:#BA0000;height:100%;width:2px;content:'';opacity:0;-webkit-transition:opacity .2s;-moz-transition:opacity .2s;-ms-transition:opacity .2s;-o-transition:opacity .2s;transition:opacity .2s;-webkit-transition:-webkit-transform .2s;-moz-transition:-moz-transform .2s;-ms-transition:-ms-transform .2s;-o-transition:-o-transform .2s;transition:transform .2s;webkit-transform:translateX(-5px);-moz-transform:translateX(-5px);-ms-transform:translateX(-5px);-o-transform:translateX(-5px);transform:translateX(-5px)}
 .bs-docs-sidenav .nav-link:hover > a:first-child:after,.bs-docs-sidenav .nav-link:focus > a:first-child:after{opacity:1;transform:none}
@@ -302,7 +302,7 @@ pre.prettyprint{text-align:left}
 .vcenter-md{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-flex-align:center;-ms-flex-align:center;-webkit-align-items:center}
 }
 .hcenter{justify-content:center;align-items:center}
-.alert-messages .floating{position:fixed;top:80px;width:50%;margin-left:25%;z-index:110}
+.alert-messages.floating{position:fixed;top:80px;width:50%;margin-left:25%;z-index:110}
 .alert-error{color:#a94442;background-color:#f2dede;border-color:#ebccd1}
 .alert-message{color:#31708f;background-color:#d9edf7;border-color:#bce8f1}
 .profile-image{max-height:300px}
@@ -372,7 +372,7 @@ img.grey-border{border:1px solid #DDD}
 .box-shadow-grey-top{box-shadow:0 -3px 4px -4px rgba(0,0,0,.4);-webkit-box-shadow:0 -3px 4px -4px rgba(0,0,0,.4);-moz-box-shadow:0 -3px 4px -4px rgba(0,0,0,.4);z-index:2;border-top:1px solid rgba(223,223,223,0.5)}
 .box-shadow-grey{box-shadow:0 0 3px rgba(0,0,0,.2);-webkit-box-shadow:0 0 3px rgba(0,0,0,.2);-moz-box-shadow:0 0 3px rgba(0,0,0,.2);z-index:2;border:1px solid rgba(223,223,223,0.5)}
 .border-radius-sm{border-radius:6px}
-.meter{width:50px;position:relative;background:#fff;-moz-border-radius-topright:10px;-moz-border-radius-topleft:10px;-moz-border-radius-bottomright:10px;-moz-border-radius-bottomleft:10px;-webkit-border-top-right-radius:10px;-webkit-border-top-left-radius:10px;-webkit-border-bottom-right-radius:10px;-webkit-border-bottom-left-radius:10px;border-top-right-radius:10px;border-top-left-radius:10px;border-bottom-right-radius:10px;border-bottom-left-radius:10px;padding:3px;align-items:flex-end;display:flex;justify-content:flex-end}
+.meter{height:100%;width:50px;position:relative;background:#fff;-moz-border-radius-topright:10px;-moz-border-radius-topleft:10px;-moz-border-radius-bottomright:10px;-moz-border-radius-bottomleft:10px;-webkit-border-top-right-radius:10px;-webkit-border-top-left-radius:10px;-webkit-border-bottom-right-radius:10px;-webkit-border-bottom-left-radius:10px;border-top-right-radius:10px;border-top-left-radius:10px;border-bottom-right-radius:10px;border-bottom-left-radius:10px;padding:3px;align-items:flex-end;display:flex;justify-content:flex-end}
 .progress-bar{background-color:#2bc253}
 .meter > span{display:block;width:50px!important;-webkit-border-top-right-radius:10px;-webkit-border-bottom-right-radius:10px;-moz-border-radius-topright:10px;-moz-border-radius-bottomright:10px;border-top-right-radius:10px;border-bottom-right-radius:10px;-webkit-border-top-left-radius:10px;-webkit-border-bottom-left-radius:10px;-moz-border-radius-topleft:10px;-moz-border-radius-bottomleft:10px;border-top-left-radius:10px;border-bottom-left-radius:10px;background-color:#2bc253;background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#2bc253),color-stop(1,#54f054));background-image:-moz-linear-gradient(center bottom,#2bc253 37%,#54f054 69%);-webkit-box-shadow:inset 0 2px 9px rgba(255,255,255,0.3),inset 0 -2px 6px rgba(0,0,0,0.4);-moz-box-shadow:inset 0 2px 9px rgba(255,255,255,0.3),inset 0 -2px 6px rgba(0,0,0,0.4);box-shadow:inset 0 2px 9px rgba(255,255,255,0.3),inset 0 -2px 6px rgba(0,0,0,0.4);position:relative;overflow:hidden}
 .meter > span:after,.animate > span > span{content:"";position:absolute;top:0;left:0;bottom:0;right:0;background-image:-webkit-gradient(linear,0 0,100% 100%,color-stop(.25,rgba(255,255,255,.2)),color-stop(.25,transparent),color-stop(.5,transparent),color-stop(.5,rgba(255,255,255,.2)),color-stop(.75,rgba(255,255,255,.2)),color-stop(.75,transparent),to(transparent));background-image:-moz-linear-gradient(-45deg,rgba(255,255,255,.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.2) 50%,rgba(255,255,255,.2) 75%,transparent 75%,transparent);z-index:1;-webkit-background-size:50px 50px;-moz-background-size:50px 50px;background-size:50px 50px;-webkit-border-top-right-radius:10px;-webkit-border-bottom-right-radius:10px;-moz-border-radius-topright:10px;-moz-border-radius-bottomright:10px;border-top-right-radius:10px;border-bottom-right-radius:10px;-webkit-border-top-left-radius:10px;-webkit-border-bottom-left-radius:10px;-moz-border-radius-topleft:10px;-moz-border-radius-bottomleft:10px;border-top-left-radius:10px;border-bottom-left-radius:10px;overflow:hidden}
