--- a/templates/admin/applications.html
+++ b/templates/admin/applications.html
@@ -15,27 +15,28 @@
                     <ul class="nav nav-pills nav-pills-dark">
                         {% for c in categories %}
                         <li {% if loop.first %}class="active"{% endif %}>
-                            <a href="#{{c.short_name}}" data-toggle="tab">{{c.name}}</a>
+                            <a href="#{{c.short_name}}" data-toggle="pill">{{c.name}}</a>
                         </li>
                         {% endfor %}
                     </ul>
                     <div class="tab-content">
-                        <table class="table table-stripped table-condensed table-hover">
+                        {% for c in categories %}
+                        <div {% if loop.first %}class="tab-pane active" {% else %} class="tab-pane" {% endif %} id="{{c.short_name}}">
+                             <table class="table table-stripped table-condensed table-hover">
                             <thead>
                                 <tr>
                                     <th>Project</th>
                                     <th>Category</th>
-                                    <th>Featured</th>
+                                    <th style="text-align:center;">Featured</th>
                                 </tr>
                             </thead>
-                        {% for c in categories %}
-                        <div {% if loop.first %}class="tab-pane active" {% else %} class="tab-pane" {% endif %} id="{{c.short_name}}">
                             {% for app in apps[c.short_name] %}
                                 {{ render_app_admin_featured(app, upload_method) }}
                             {% endfor %}
+                            </table>
                         </div>
                         {% endfor %}
-                        </table>
+                        
                     </div>
                 </div>
             </div>
