--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -29,27 +29,34 @@
                 </div>
                 {% if categories %}
                 <h2 class="padding-top-xs">{{_('Current Categories')}}</h2>
-                <hr>
+                <table class="table table-stripped table-condensed table-hover table-responsive">
+                    <col style="width:30%">
+                    <col style="width:30%">
+                    <col style="width:40%">
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th style="text-align:center;">Projects</th>
+                            <th style="text-align:center;">Actions</th>
+                        </tr>
+                    </thead>
                 {% for c in categories %}
-                <div class="row vcenter hcenter">
-                    <div class="col-sm-6">
-                        <h3>{{c.name}} <small>({{ n_apps_per_category[c.short_name]}} apps)</small></h3>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="btn-group pull-right">
+                    <tr>
+                        <td>{{c.name}}</td>
+                        <td style="text-align:center;">{{ n_apps_per_category[c.short_name]}}</td>
+                        <td style="text-align:center;"><div class="btn-group">
                             <a href="{{url_for('admin.update_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-edit"></i> {{_('Edit Category')}}</a>
                             {% if n_apps_per_category[c.short_name] == 0 and (categories | count > 1) %}
                             <a href="{{url_for('admin.del_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-trash"></i> {{_('Delete Category')}}</a>
                             {% else %}
                             <a href="#" class="btn disabled"><i class="glyphicon glyphicon-trash"></i> {{_('Delete Category')}}</a>
                             {% endif %}
-                        </div>
-                    </div>
-                </div>
+                        </div></td>
+                    </tr>
                 {% if not loop.last %}
-                <hr>
                 {% endif %}
-                {% endfor %}
+            {% endfor %}
+            </table>
                 {% endif %}
             </div>
         </div>
