--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -10,8 +10,9 @@
             <div class="row">
                 <div class="col-sm-9 col-sm-offset-3">
                     {% include "_flash_messages.html" %}
-                    <h1 class="inset-text-grey"><strong>Admin Options</strong></h1>
-                    
+                    <div class="col-xs-12 padding-bottom-sm">
+                        <h1 class="inset-text-grey"><strong>Admin Options</strong></h1>
+                    </div>
                         <div id="projects" class="col-sm-6 col-md-4">
                             <a href="{{ url_for('account.applications', name=current_user.name) }}" rel="nofollow">
                             <div class="well">
