--- a/templates/applications/importers/flickr.html
+++ b/templates/applications/importers/flickr.html
@@ -35,7 +35,7 @@
                             <div class="row">
                                 <ul>
                                 {% for album in albums %}
-                                    <li class="col-md-3 col-sm-4 col-xs-12 text-center-xs same-size flickr-thumbnails">
+                                    <li class="col-md-3 col-sm-4 col-xs-12 text-center-xs flickr-thumbnails">
                                         <h4><strong>{{ album['title'] }}</strong></h4>
                                         <img src="{{ album['thumbnail_url'] }}" class="grey-border">
                                         <p class="small">{{ album['photos'] }} {{ _('photos') }}</p>
