--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -29,10 +29,10 @@
           {% for account in accounts %}
               <li>
                 <a href="{{url_for('account.profile', name=account.name)}}" class="polaroid polaroid-sm" rel="popover" title="{{account.name}}" data-polaroid-title="{{account.name}}" data-html="true" data-content="
-             <strong>{{_('Joined')}}:</strong> {{user.created[0:10]}} 
+             <strong>{{_('Joined')}}:</strong> {{account.created[0:10]}} 
              <br/>
-             <strong>{{_('Answers')}}:</strong> {{user.task_runs}}
-             " rel="popover" data-original-title="<strong>{{user.fullname}}</strong>">
+             <strong>{{_('Answers')}}:</strong> {{account.task_runs}}
+             " rel="popover" data-original-title="<strong>{{account.fullname}}</strong>">
                   {{ helper.render_user_thumbnail(account, upload_method) }}
                 </a>
               </li>
